# bottomjson

./: .gitignore  README.md  pyproject.toml
src/: bottomjson.py
tests/: test_bottom_decoder.py
