[project]
name = "bottomjson"
version = "0.1.0"
description = "Bottom Json"
authors = [
    {name = "bageljr", email = "bageljr897@protonmail.com"},
]
dependencies = [
    "bottom>=2.2.0",
    "bottomify>=1.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
]
